<resources>
    <!--    <string name="app_name">Security Guard</string>-->
    <string name="NoInternet">Internet connectivity is lost!</string>
    <string name="my_flat">My Flat</string>
    <string name="bill_history">Bill History</string>
    <string name="ledger_report">Ledger Report</string>
    <string name="all_flats">All Flats</string>
    <string name="notice_board">Notice Board</string>
    <string name="meetings">Meetings</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="events">Events</string>
    <string name="parking_details">Parking Details</string>
    <string name="prfoile">Profile</string>
    <string name="complaints">Complaints</string>
    <string name="contactus">Contact us</string>
    <string name="changeword">Change Password</string>
    <string name="logout">Logout</string>
    <string name="laws">Byes Laws</string>
    <string name="vendors">Vendors</string>
    <string name="visitor">Visitor</string>
    <string name="staff">Staff</string>
    <string name="resident">Resident</string>
    <string name="about">About Society</string>
    <string name="title_activity_drawer">drawer</string>
    <string-array name="Select_Society">
        <item>Select Society</item>
        <item>GCC Evergreen Society</item>
        <item>Rishi Raj Society</item>
        <item>Spaces 912</item>
        <item>Poonam Orbit Building</item>
        <item>Ostwal Building </item>
    </string-array>
    <string-array name="Guard_Type">
        <item>Select Visitor Type</item>
        <item>New Visitor</item>
        <item>Regular Visitor</item>
        <item>Expected Visitor</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawaer_actictivity">NavigationDrawerActivity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
        <item name="colorControlNormal">@color/white</item>
        <!--<item name="android:minWidth">24dp</item>-->
        <!--<item name="android:maxWidth">40dp</item>-->

    </style>

    <string name="title_activity_new_visitor">New Visitor</string>
    <string name="title_activity_expected_visitor">Expected Visitor</string>
    <string name="title_activity_regular_visitor">Regular Visitor</string>
    <string name="title_activity_new_visit_register">New Visitor Entry</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_expected_visitor_register">Expected Visitor Entry</string>
    <string name="title_activity_regular_visitor_register">Regular Visitor Entry</string>
    <string name="title_activity_guard_profile">Guard Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_about_society">About Society</string>
</resources>
